nav fixed and scrollbar on x fixed

--- a/style.css
+++ b/style.css
@@ -4,12 +4,20 @@ body
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
     background-color: black;
+    width: 100%;
+    overflow-x: hidden; /* Horizontal scrolling disable */
+}
+.maincontainer
+{
+    width: 100%;
+    /* height: 100vh; */
 }
 .container-one
 {
-   width: 100%;
+   /* width: 100%; */
    height: 100vh;
    overflow: hidden;
+   position: relative;
 }
 .bg-image
 {
@@ -33,24 +41,21 @@ body
    right: 0;
 
 }
-.nav
-{
+.nav {
     position: absolute;
-    width:1200px;
+    width: 100%; /* Full width le raha hai */
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; /* Left & Right me maximum gap */
     align-items: center;
     top: 6%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    /* background-color: aqua; */
-    
-    
-
-   
-    
-
+    transform: translate(-50%, -50%);
+    padding: 0 50px; /* Left & Right dono side 50px space */
+    background-color: transparent;
+    box-sizing: border-box;/* Ensure karega ki padding width ke andar count ho */
 }
+
+
 .netflixlogo
 {
     /* position: absolute; */
@@ -59,7 +64,7 @@ body
     /* background-color: aqua; */
     margin: 0;
     display: block;
-    margin-right: 150px;
+    /* margin-right: 150px; */
    
     
 }
@@ -102,6 +107,7 @@ body
     gap: 2px;
     /* background-color: brown; */
     padding: 20px;
+    box-sizing: border-box;
 
 }
 .mainheading
